<resources>
    <string name="app_name">PLLRegisterCalculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lfm_section_title">ЛЧМ</string>
    <string name="lower_freq_value_field_text">Нижнее значение</string>
    <string name="mega_hertz_freq_dimen">МГц</string>
    <string name="highest_freq_value_field_text">Верхнее значение</string>
    <string name="lfm_period_input_title_text">Период модуляции</string>
    <string name="millisec_time_dimen">мс</string>
    <string name="symmetry_lfm_selection_check_box_text">Симметричная</string>
    <string name="ref_reg_title">REF:</string>
    <string name="register_section_title_text">Регистры</string>
    <string name="int_reg_title">INT:</string>
    <string name="frac_reg_title">FRAC:</string>
    <string name="mod_reg_title">MOD:</string>
    <string name="ctr1_rst_reg_title">CTR1_RST:</string>
    <string name="ctr1_reg_title">CTR1:</string>
    <string name="ctr2_reg_title">CTR2:</string>
    <string name="ctr3_reg_title">CTR3:</string>
    <string name="lfm1_reg_title">LFM1:</string>
    <string name="lfm2_reg_title">LFM2:</string>
    <string name="lfm3_reg_title">LFM3:</string>
    <string name="calculate_button_text">РАССЧИТАТЬ</string>
    <string name="low_freq_under_input_error_text">Не менее 13250 МГц </string>
    <string name="low_freq_above_input_error_text">Не более 13390 МГц </string>
    <string name="high_freq_under_input_error_text">Не менее 13260 МГц </string>
    <string name="high_freq_above_input_error_text">Не более 13400 МГц </string>
    <string name="low_freq_higher_than_high_freq_input_error_text">Нижнее значение не более верхнего </string>
    <string name="modulation_period_above_input_error_text">Не более 100 мс</string>
    <string name="modulation_period_under_input_error_text">Не менее 0,2 мс</string>
    <string name="register_calculation_error_text">Не удалось получить значения регистров</string>
    <string name="beat_signal_parameters_calculation_error_text">Не удалось получить значения параметров сигнала биений</string>
    <string name="empty_input_error_text">Пустое поле</string>
    <string name="lowest_frequency_default_value">13250</string>
    <string name="highest_frequency_default_value">13400</string>
    <string name="lfm_period_default_value">50</string>
    <string name="delay_time_default_value">425</string>
    <string name="beat_signal_title_text">Сигнал биений</string>
    <string name="beat_signal_frequency_title">Частота сигнала биений:</string>
    <string name="beat_signal_period_title">Период сигнала биений:</string>
    <string name="beat_signal_frequency_value">%1$.3f кГц</string>
    <string name="beat_signal_period_value">%1$d мкс</string>
</resources>